@@ -52,6 +52,13 @@ if [isbuild hppa-ibm-macos ] {
     puts "PASSED: isbuild, native bogus config string"
 }
 
+# test default argument for isbuild
+if [string compare [isbuild] $build_triplet] {
+   puts "FAILED: isbuild with no arguments"
+} else {
+   puts "PASSED: isbuild with no arguments"
+}
+
 # ishost tests
 if [ishost $host_triplet] {
     puts "PASSED: ishost, native"
@@ -71,6 +78,13 @@ if [ishost hppa-ibm-macos] {
     puts "PASSED: ishost, native bogus config string"
 }
 
+# test default argument for ishost
+if [string compare [ishost] $host_triplet] {
+   puts "FAILED: ishost with no arguments"
+} else {
+   puts "PASSED: ishost with no arguments"
+}
+
 # istarget tests
 if [istarget $target_triplet] {
     puts "PASSED: istarget, native"
@@ -88,6 +102,13 @@ if [istarget hppa-ibm-macos] {
     puts "FAILED: istarget, native bogus config string"
 } else {
     puts "PASSED: istarget, native bogus config string"
+}
+
+# test default argument for istarget
+if [string compare [istarget] $target_triplet] {
+   puts "FAILED: istarget with no arguments"
+} else {
+   puts "PASSED: istarget with no arguments"
 }
 
 # native tests
